--- a/index.html
+++ b/index.html
@@ -1,13 +1,61 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/Pic.png" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>EMO-Lens</title>
-  </head>
-  <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.jsx"></script>
-  </body>
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <title>AI Emotion Analysis</title>
+  <script defer src="face-api.min.js"></script>
+  <script defer src="script.js"></script>
+  <style>
+    body {
+      margin: 0;
+      padding: 0;
+      width: 100vw;
+      height: 100vh;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      overflow: hidden; 
+      font-family: 'sans-serif'; 
+      background-color: white; 
+      color: black; /
+    }
+
+    header {
+      background-color: white;
+      color: white;
+      width: 100%;
+      padding: 20px 0;
+      text-align: center;
+      position: absolute;
+      top: 0;
+      left: 0;
+      z-index: 1; 
+    }
+
+    header h1 {
+      font-weight: bold;
+      color: black; 
+      font-family: 'sans-serif'; 
+    }
+
+    video {
+      width: 100%;
+      height: 100%;
+      object-fit: cover; 
+      position: fixed;
+      top: 0;
+      left: 0;
+      z-index: 0; 
+    }
+  </style>
+</head>
+<body>
+  <header>
+    <h1>AI Emotion Analysis</h1>
+  </header>
+  <video id="video" width="720" height="560" autoplay muted></video>
+</body>
 </html>
